src/test/ui/proc-macro/invalid-punct-ident-4.stderr
error: unexpected close delimiter: `)`
  --> $DIR/invalid-punct-ident-4.rs:6:1
   |
LL | lexer_failure!(); //~ ERROR proc macro panicked
   | ^^^^^^^^^^^^^^^^^ unexpected close delimiter

error: proc macro panicked
  --> $DIR/invalid-punct-ident-4.rs:6:1
   |
LL | lexer_failure!(); //~ ERROR proc macro panicked
   | ^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

